XWIKI-481 Fixes: - Overflowing in edit/admin mode - IE puts a margin around <form> elements
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki/branches/XWIKI_1_0_BETA_1@1756 f329d543-caf0-0310-9063-dda96c69346f

--- a/web/standard/src/main/webapp/skins/xwiki10b1/screenlayout.css
+++ b/web/standard/src/main/webapp/skins/xwiki10b1/screenlayout.css
@@ -965,6 +965,7 @@ div.pagelayoutoptions td{
 #xwikieditcontent{
   border: 2px solid #3381CC;
   padding: 3px;
+  overflow: auto;
 }
 html>body #xwikieditcontent{
   padding: 3px 8px 3px 3px;
